capi/src/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum turso_status_code_t {
    TURSO_OK = 0,
    TURSO_DONE = 1,
    TURSO_ROW = 2,
    TURSO_IO = 3,
    TURSO_BUSY = 4,
    TURSO_INTERRUPT = 5,
    TURSO_ERROR = 127,
    TURSO_MISUSE = 128,
    TURSO_CONSTRAINT = 129,
    TURSO_READONLY = 130,
    TURSO_DATABASE_FULL = 131,
    TURSO_NOTADB = 132,
    TURSO_CORRUPT = 133,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_status_t {
    pub error: *const ::std::os::raw::c_char,
    pub code: turso_status_code_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_status_t"][::std::mem::size_of::<turso_status_t>() - 16usize];
    ["Alignment of turso_status_t"][::std::mem::align_of::<turso_status_t>() - 8usize];
    ["Offset of field: turso_status_t::error"]
        [::std::mem::offset_of!(turso_status_t, error) - 0usize];
    ["Offset of field: turso_status_t::code"]
        [::std::mem::offset_of!(turso_status_t, code) - 8usize];
};
impl Default for turso_status_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum turso_type_t {
    TURSO_TYPE_INTEGER = 1,
    TURSO_TYPE_REAL = 2,
    TURSO_TYPE_TEXT = 3,
    TURSO_TYPE_BLOB = 4,
    TURSO_TYPE_NULL = 5,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum turso_tracing_level_t {
    TURSO_TRACING_LEVEL_ERROR = 1,
    TURSO_TRACING_LEVEL_WARN = 2,
    TURSO_TRACING_LEVEL_INFO = 3,
    TURSO_TRACING_LEVEL_DEBUG = 4,
    TURSO_TRACING_LEVEL_TRACE = 5,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_log_t {
    pub message: *const ::std::os::raw::c_char,
    pub target: *const ::std::os::raw::c_char,
    pub file: *const ::std::os::raw::c_char,
    pub timestamp: u64,
    pub line: usize,
    pub level: turso_tracing_level_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_log_t"][::std::mem::size_of::<turso_log_t>() - 48usize];
    ["Alignment of turso_log_t"][::std::mem::align_of::<turso_log_t>() - 8usize];
    ["Offset of field: turso_log_t::message"]
        [::std::mem::offset_of!(turso_log_t, message) - 0usize];
    ["Offset of field: turso_log_t::target"][::std::mem::offset_of!(turso_log_t, target) - 8usize];
    ["Offset of field: turso_log_t::file"][::std::mem::offset_of!(turso_log_t, file) - 16usize];
    ["Offset of field: turso_log_t::timestamp"]
        [::std::mem::offset_of!(turso_log_t, timestamp) - 24usize];
    ["Offset of field: turso_log_t::line"][::std::mem::offset_of!(turso_log_t, line) - 32usize];
    ["Offset of field: turso_log_t::level"][::std::mem::offset_of!(turso_log_t, level) - 40usize];
};
impl Default for turso_log_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_database_t {
    pub status: turso_status_t,
    pub inner: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_database_t"][::std::mem::size_of::<turso_database_t>() - 24usize];
    ["Alignment of turso_database_t"][::std::mem::align_of::<turso_database_t>() - 8usize];
    ["Offset of field: turso_database_t::status"]
        [::std::mem::offset_of!(turso_database_t, status) - 0usize];
    ["Offset of field: turso_database_t::inner"]
        [::std::mem::offset_of!(turso_database_t, inner) - 16usize];
};
impl Default for turso_database_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_connection_t {
    pub status: turso_status_t,
    pub inner: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_connection_t"][::std::mem::size_of::<turso_connection_t>() - 24usize];
    ["Alignment of turso_connection_t"][::std::mem::align_of::<turso_connection_t>() - 8usize];
    ["Offset of field: turso_connection_t::status"]
        [::std::mem::offset_of!(turso_connection_t, status) - 0usize];
    ["Offset of field: turso_connection_t::inner"]
        [::std::mem::offset_of!(turso_connection_t, inner) - 16usize];
};
impl Default for turso_connection_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_statement_t {
    pub status: turso_status_t,
    pub inner: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_statement_t"][::std::mem::size_of::<turso_statement_t>() - 24usize];
    ["Alignment of turso_statement_t"][::std::mem::align_of::<turso_statement_t>() - 8usize];
    ["Offset of field: turso_statement_t::status"]
        [::std::mem::offset_of!(turso_statement_t, status) - 0usize];
    ["Offset of field: turso_statement_t::inner"]
        [::std::mem::offset_of!(turso_statement_t, inner) - 16usize];
};
impl Default for turso_statement_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_rows_t {
    pub status: turso_status_t,
    pub inner: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_rows_t"][::std::mem::size_of::<turso_rows_t>() - 24usize];
    ["Alignment of turso_rows_t"][::std::mem::align_of::<turso_rows_t>() - 8usize];
    ["Offset of field: turso_rows_t::status"]
        [::std::mem::offset_of!(turso_rows_t, status) - 0usize];
    ["Offset of field: turso_rows_t::inner"][::std::mem::offset_of!(turso_rows_t, inner) - 16usize];
};
impl Default for turso_rows_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_row_t {
    pub status: turso_status_t,
    pub inner: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_row_t"][::std::mem::size_of::<turso_row_t>() - 24usize];
    ["Alignment of turso_row_t"][::std::mem::align_of::<turso_row_t>() - 8usize];
    ["Offset of field: turso_row_t::status"][::std::mem::offset_of!(turso_row_t, status) - 0usize];
    ["Offset of field: turso_row_t::inner"][::std::mem::offset_of!(turso_row_t, inner) - 16usize];
};
impl Default for turso_row_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_slice_ref_t {
    pub ptr: *const ::std::os::raw::c_void,
    pub len: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_slice_ref_t"][::std::mem::size_of::<turso_slice_ref_t>() - 16usize];
    ["Alignment of turso_slice_ref_t"][::std::mem::align_of::<turso_slice_ref_t>() - 8usize];
    ["Offset of field: turso_slice_ref_t::ptr"]
        [::std::mem::offset_of!(turso_slice_ref_t, ptr) - 0usize];
    ["Offset of field: turso_slice_ref_t::len"]
        [::std::mem::offset_of!(turso_slice_ref_t, len) - 8usize];
};
impl Default for turso_slice_ref_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union turso_value_union_t {
    pub integer: i64,
    pub real: f64,
    pub text: turso_slice_ref_t,
    pub blob: turso_slice_ref_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_value_union_t"][::std::mem::size_of::<turso_value_union_t>() - 16usize];
    ["Alignment of turso_value_union_t"][::std::mem::align_of::<turso_value_union_t>() - 8usize];
    ["Offset of field: turso_value_union_t::integer"]
        [::std::mem::offset_of!(turso_value_union_t, integer) - 0usize];
    ["Offset of field: turso_value_union_t::real"]
        [::std::mem::offset_of!(turso_value_union_t, real) - 0usize];
    ["Offset of field: turso_value_union_t::text"]
        [::std::mem::offset_of!(turso_value_union_t, text) - 0usize];
    ["Offset of field: turso_value_union_t::blob"]
        [::std::mem::offset_of!(turso_value_union_t, blob) - 0usize];
};
impl Default for turso_value_union_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct turso_value_t {
    pub value: turso_value_union_t,
    pub type_: turso_type_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_value_t"][::std::mem::size_of::<turso_value_t>() - 24usize];
    ["Alignment of turso_value_t"][::std::mem::align_of::<turso_value_t>() - 8usize];
    ["Offset of field: turso_value_t::value"]
        [::std::mem::offset_of!(turso_value_t, value) - 0usize];
    ["Offset of field: turso_value_t::type_"]
        [::std::mem::offset_of!(turso_value_t, type_) - 16usize];
};
impl Default for turso_value_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct turso_result_value_t {
    pub status: turso_status_t,
    pub ok: turso_value_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_result_value_t"][::std::mem::size_of::<turso_result_value_t>() - 40usize];
    ["Alignment of turso_result_value_t"][::std::mem::align_of::<turso_result_value_t>() - 8usize];
    ["Offset of field: turso_result_value_t::status"]
        [::std::mem::offset_of!(turso_result_value_t, status) - 0usize];
    ["Offset of field: turso_result_value_t::ok"]
        [::std::mem::offset_of!(turso_result_value_t, ok) - 16usize];
};
impl Default for turso_result_value_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_execute_t {
    pub status: turso_status_t,
    pub rows_changed: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_execute_t"][::std::mem::size_of::<turso_execute_t>() - 24usize];
    ["Alignment of turso_execute_t"][::std::mem::align_of::<turso_execute_t>() - 8usize];
    ["Offset of field: turso_execute_t::status"]
        [::std::mem::offset_of!(turso_execute_t, status) - 0usize];
    ["Offset of field: turso_execute_t::rows_changed"]
        [::std::mem::offset_of!(turso_execute_t, rows_changed) - 16usize];
};
impl Default for turso_execute_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " Database description."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_database_config_t {
    #[doc = " Path to the database file or `:memory:`"]
    pub path: *const ::std::os::raw::c_char,
    #[doc = " Optional comma separated list of experimental features to enable"]
    pub experimental_features: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_database_config_t"][::std::mem::size_of::<turso_database_config_t>() - 16usize];
    ["Alignment of turso_database_config_t"]
        [::std::mem::align_of::<turso_database_config_t>() - 8usize];
    ["Offset of field: turso_database_config_t::path"]
        [::std::mem::offset_of!(turso_database_config_t, path) - 0usize];
    ["Offset of field: turso_database_config_t::experimental_features"]
        [::std::mem::offset_of!(turso_database_config_t, experimental_features) - 8usize];
};
impl Default for turso_database_config_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct turso_config_t {
    pub logger: ::std::option::Option<unsafe extern "C" fn(log: turso_log_t)>,
    pub log_level: *const ::std::os::raw::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of turso_config_t"][::std::mem::size_of::<turso_config_t>() - 16usize];
    ["Alignment of turso_config_t"][::std::mem::align_of::<turso_config_t>() - 8usize];
    ["Offset of field: turso_config_t::logger"]
        [::std::mem::offset_of!(turso_config_t, logger) - 0usize];
    ["Offset of field: turso_config_t::log_level"]
        [::std::mem::offset_of!(turso_config_t, log_level) - 8usize];
};
impl Default for turso_config_t {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    #[doc = " Setup some global info"]
    pub fn turso_setup(config: turso_config_t) -> turso_status_t;
}
unsafe extern "C" {
    #[doc = " Create or open a database"]
    pub fn turso_database_init(config: turso_database_config_t) -> turso_database_t;
}
unsafe extern "C" {
    #[doc = " Connect with the database"]
    pub fn turso_database_connect(self_: turso_database_t) -> turso_connection_t;
}
unsafe extern "C" {
    #[doc = " Prepare a statement in a connection"]
    pub fn turso_connection_prepare(
        self_: turso_connection_t,
        sql: turso_slice_ref_t,
    ) -> turso_statement_t;
}
unsafe extern "C" {
    #[doc = " Execute a statement"]
    pub fn turso_statement_execute(self_: turso_statement_t) -> turso_execute_t;
}
unsafe extern "C" {
    #[doc = " Query a statement"]
    pub fn turso_statement_query(self_: turso_statement_t) -> turso_rows_t;
}
unsafe extern "C" {
    #[doc = " Execute one iteration of underlying IO backend"]
    pub fn turso_statement_io(self_: turso_statement_t) -> turso_status_t;
}
unsafe extern "C" {
    #[doc = " Reset a statement"]
    pub fn turso_statement_reset(self_: turso_statement_t) -> turso_status_t;
}
unsafe extern "C" {
    #[doc = " Get column count"]
    pub fn turso_statement_column_count(self_: turso_statement_t) -> i32;
}
unsafe extern "C" {
    #[doc = " Get the column name at the index"]
    pub fn turso_statement_column_name(self_: turso_statement_t, index: i32) -> turso_slice_ref_t;
}
unsafe extern "C" {
    #[doc = " Get the next row from rows"]
    pub fn turso_rows_next(self_: turso_rows_t) -> turso_row_t;
}
unsafe extern "C" {
    #[doc = " Get the value at the the index"]
    pub fn turso_row_value(self_: turso_row_t, index: i32) -> turso_result_value_t;
}
unsafe extern "C" {
    #[doc = " Bind a named argument to a statement"]
    pub fn turso_statement_bind_named(
        self_: turso_statement_t,
        name: turso_slice_ref_t,
        value: turso_value_t,
    ) -> turso_status_t;
}
unsafe extern "C" {
    #[doc = " Bind a positional argument to a statement"]
    pub fn turso_statement_bind_positional(
        self_: turso_statement_t,
        position: i32,
        value: turso_value_t,
    ) -> turso_status_t;
}
unsafe extern "C" {
    #[doc = " Create a turso integer value"]
    pub fn turso_integer(integer: i64) -> turso_value_t;
}
unsafe extern "C" {
    #[doc = " Create a turso real value"]
    pub fn turso_real(real: f64) -> turso_value_t;
}
unsafe extern "C" {
    #[doc = " Create a turso text value"]
    pub fn turso_text(ptr: *const ::std::os::raw::c_char, len: usize) -> turso_value_t;
}
unsafe extern "C" {
    #[doc = " Create a turso blob value"]
    pub fn turso_blob(ptr: *const u8, len: usize) -> turso_value_t;
}
unsafe extern "C" {
    #[doc = " Create a turso null value"]
    pub fn turso_null() -> turso_value_t;
}
unsafe extern "C" {
    #[doc = " Deallocate and close a status"]
    pub fn turso_status_deinit(self_: turso_status_t);
}
unsafe extern "C" {
    #[doc = " Deallocate and close a database"]
    pub fn turso_database_deinit(self_: turso_database_t);
}
unsafe extern "C" {
    #[doc = " Deallocate and close a connection"]
    pub fn turso_connection_deinit(self_: turso_connection_t);
}
unsafe extern "C" {
    #[doc = " Deallocate and close a statement"]
    pub fn turso_statement_deinit(self_: turso_statement_t);
}
unsafe extern "C" {
    #[doc = " Deallocate and close rows"]
    pub fn turso_rows_deinit(self_: turso_rows_t);
}
unsafe extern "C" {
    #[doc = " Deallocate and close a row"]
    pub fn turso_row_deinit(self_: turso_row_t);
}
